--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <form>
+    <form action="#" onsubmit="funcSubmit(this)">
         <h1>HOLY POLLEY</h1>
         <input type="text" required id="question" placeholder="What is your question..."/>
         <label>
@@ -24,8 +24,37 @@
         </label>
         <div id="buttons">
             <div id="add"><i class="fa-solid fa-plus"></i></div>
-            <input type="submit" value="POLL"/>
+            <input type="submit" value="POLL" id="submit"/>
         </div>
+
+        <script>
+            const labels = document.querySelectorAll('form label');
+
+            labels.forEach(label => {
+                /*Adds the atom icon before each label in form label*/
+                label.innerHTML = `<i class="fa-solid fa-atom"></i>` + label.innerHTML;
+            })
+
+            const addBtn = document.getElementById(`add`);
+            const form = document.querySelector(`form`);
+            const btns = document.getElementById('buttons');
+
+            function addOption() {
+                const newNode = document.createElement(`label`)
+                /*insert newNode just before btns*/
+                form.insertBefore(newNode, btns);
+                /*get the last thing put in and set its innerHTML as same as above*/
+                document.querySelector('label:last-of-type').innerHTML = `<i class="fa-solid fa-atom"></i>` +
+                    `<input type="text" required class="options" placeholder="..."/>`
+            }
+
+            addBtn.addEventListener("click", addOption);
+
+            async function funcSubmit(e) {
+                console.log("Hello");
+            }
+
+        </script>
     </form>
 </body>
 </html>
