--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,25 @@
             addBtn.addEventListener("click", addOption);
 
             async function funcSubmit(e) {
-                console.log("Hello");
+                const question = document.getElementById("question").value;
+
+                /*Make an Array of all the .options class and map/grab the option.value of each*/
+                const options = Array.from(document.querySelectorAll('.options')).map(option => option.value);
+                /*Random ID*/
+                const id = Math.floor(Math.random() * 10000);
+
+                /*API call, POST*/
+                const res = await fetch('/', {
+                    method: 'POST',
+                    headers: {
+                        "Content-type": "application/json"
+                    },
+                    body: JSON.stringify({
+                        id,
+                        question,
+                        options
+                    })
+                })
             }
 
         </script>
