Implemented the GET response to adding the JSON data into page

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,8 @@
                         options
                     })
                 })
+
+                window.location.href = `/${id}`
             }
 
         </script>
