--- a/public/poll.html
+++ b/public/poll.html
@@ -5,9 +5,52 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Polley</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/poll.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+          integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    mark
+    <main>
+        <h1></h1>
+        <ul id="options"></ul>
+    </main>
+    <script>
+        /*Get the id of the page and redirect to home page if non-existent*/
+        const id = window.location.pathname.replaceAll('/', '');
+        console.log(id);
+
+        const question = document.querySelector('main > h1');
+        const optionsList = document.querySelector('ul');
+
+        /*Grab all ids again*/
+        async function onLoad() {
+            const idsRes = await fetch('/ids');
+            const { ids } = await idsRes.json();
+
+            if (!ids.includes(id)) {
+                /**/
+                window.location.href = '/';
+            }
+
+            const res = await fetch('/data/' + id);
+            const { data } = await res.json();
+            console.log(data);
+            /*If it includes ? then no add if not then add ?*/
+            question.innerText = data.question + (data.question.includes('?') ? '' : '?');
+
+            let newInnerListHTML = '';
+            Object.keys(data.options).forEach((option, index) => {
+                newInnerListHTML += `<li id="${index}">${option}</li>`;
+            })
+
+            optionsList.innerHTML = newInnerListHTML;
+        }
+        onLoad();
+    </script>
 </body>
 </html>
