Added more CSS styling and refactored linear gradient add on

--- a/public/poll.html
+++ b/public/poll.html
@@ -59,9 +59,7 @@
         }
         onLoad();
 
-        const linearGradients = ['#00C9FF, #92FE9D', '#fc00ff, #00dbde', '#D38312, #A83279', '#fdfc47, #24fe41'];
-
-        function userClick(index) {
+        async function userClick(index) {
             console.log(index.target.id);
             const selected = index.target.id;
             /*Spread what is in the array to get max*/
@@ -72,11 +70,16 @@
             optionsLi.forEach(val => {
                 const option = val.id;
                 val.removeEventListener('click', userClick);
-                val.style.background = `linear-gradient(to right, ${linearGradients[Math.floor(Math.random() * linearGradients.length)]})`;
+                val.classList.add('lins');
                 val.style.color = '#0f172a';
                 if (maxNumberOfVotes !== 0) {
-                    /*Get value of the option and divide, gives the % */
-                    val.style.width = optionsFromServer[option] === 0 ? '5%' : `${(optionsFromServer[option]/maxNumberOfVotes) * 100}%`
+                    if (selected === option) {
+                        /*add +1*/
+                        val.style.width = optionsFromServer[option] === 0 ? '5%' : `${((optionsFromServer[option] + 1)/maxNumberOfVotes) * 100}%`
+                    } else {
+                        /*Get value of the option and divide, gives the % */
+                        val.style.width = optionsFromServer[option] === 0 ? '5%' : `${(optionsFromServer[option]/maxNumberOfVotes) * 100}%`
+                    }
                 }
             });
         }
